MAKE TICK TAC TOE CONTAINER RESPONSIVE

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!-- Tic-Tac-Toe -->
 
             <div
-                class="tick-tac-toe grid grid-cols-3 text-white aspect-square bg-[#ffffff26] border-[1px] rounded-[1rem] border-[#ffffff26] p-8 w-[95%] max-w-[20rem] mx-auto">
+                class="tick-tac-toe grid grid-cols-3 text-white aspect-square bg-[#ffffff26] border-[1px] rounded-[1rem] border-[#ffffff26] p-8 w-[95%] max-w-[20rem] mx-auto text-[1.5rem] sm:text-[3rem]">
 
                 <!-- Box1 -->
                 <div class="box box1"></div>
